Fix alignment issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -385,7 +385,7 @@ main.main > section h2 {
 	font-weight: 600;
 	margin: 0;
 	text-align: center;
-	transition: font-size 0.6s;
+	transition: font-size 0.2s;
 }
 
 main.main > section p {
@@ -417,7 +417,7 @@ input[type='checkbox']:checked + section header .container {
 
 
 input[type='checkbox']:checked + section label.section-toggle {
-	margin-top: 20px;
+	margin-top: 25px;
 	margin-left: 20px;
 	width: 50px;
 	height: 50px;
